# rocketmatter-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  endpoints.yaml  pyproject.toml
.github/workflows/: ci.yml  gitleaks.yml
rocketmatter_mcp/: client.py  credentials.py  server.py
rocketmatter_mcp/setup/: oauth_flow.py  verify.py
tests/: config.py
