[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rocketmatter-mcp"
version = "0.4.0"
description = "MCP server for Rocketmatter — ProfitSolv LCS /v1 Integration API (scoped OAuth)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["rocketmatter", "mcp", "legal", "law", "claude", "practice-management"]
dependencies = [
    "mcp>=1.28.0",
    "requests>=2.34.2",
    "keyring>=25.7.0",
]

[project.scripts]
rocketmatter-mcp = "rocketmatter_mcp.server:main"
rocketmatter-mcp-setup = "rocketmatter_mcp.setup.oauth_flow:main"
rocketmatter-mcp-verify = "rocketmatter_mcp.setup.verify:main"

[project.urls]
Homepage = "https://github.com/RosenAdvertising/rocketmatter-mcp"
Issues = "https://github.com/RosenAdvertising/rocketmatter-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["rocketmatter_mcp"]

[tool.pyright]
include = ["."]
exclude = ["**/node_modules", "**/__pycache__", ".venv", "venv", "dist", "build"]
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
